Simplify natives compilation and bindings generation